--- a/EkgDroid/app/src/main/AndroidManifest.xml
+++ b/EkgDroid/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         </activity>
         <activity android:name=".Login" android:configChanges="orientation|screenSize"/>
         <activity android:name=".Daftar" />
+        <activity android:name=".PopResult"
+            android:theme="@style/AppTheme.TransparentPop"/>
     </application>
 
 </manifest>
